# Foodie

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  env.example
apps/api/: .pytest_auth.db  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 20260216_2052_initial_auth_core.py  20260216_2058_refresh_sessions.py  20260216_2105_weight_entries.py  20260216_2110_weight_entries_user_datetime_idx.py  20260217_0700_phase4_foods_days_meal_entries.py  20260217_0800_user_targets_null_effective_date_unique.py  20260217_0900_phase6_recipes.py  20260217_1015_phase7_weekly_plans.py  20260217_1820_grocery_checked_items.py  20260217_1836_food_favorites.py  20260217_1910_recipe_tags_and_favorites.py  20260217_2030_demo_seed_data.py  21003840624d_merge_heads.py  5be3d7c494b6_phase5_user_targets.py  73ef91b04f87_phase4_meal_entry_checks_foods_.py
apps/api/app/: main.py
apps/api/app/core/: errors.py  gunicorn_conf.py  logging.py  migrations.py  scaling.py  security.py  security_headers.py  settings.py  templates.py
apps/api/app/crud/: days.py  foods.py  plans.py  recipes.py  refresh_sessions.py  targets.py  users.py  weight_entries.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  day.py  food.py  (+11 more)
apps/api/tests/: conftest.py  test_auth.py  test_cors.py  test_db_foundation.py  test_demo_seed_data.py  test_food_favorites.py  test_foods_and_days.py  test_gunicorn_conf_import.py  test_healthz.py  test_plans_weekly.py  test_recipes.py  test_request_id_and_errors.py  test_targets.py  test_weights.py
(+100 files in other folders)
